[gd_scene load_steps=6 format=2]

[ext_resource path="res://test/Collision Test.gd" type="Script" id=1]

[sub_resource type="CapsuleMesh" id=2]

[sub_resource type="BoxShape" id=5]

[sub_resource type="CubeMesh" id=3]

[sub_resource type="ConcavePolygonShape" id=4]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[node name="Collision Test" type="Spatial"]
script = ExtResource( 1 )

[node name="Area" type="Area" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Area"]
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.5876, 0, 0 )
mesh = SubResource( 3 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="MeshInstance"]

[node name="CollisionShape" type="CollisionShape" parent="MeshInstance/StaticBody"]
shape = SubResource( 4 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.929029, 0.370006, 0, -0.370006, 0.929029, 2.14621, 2.71513, 4.8644 )
[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="area_exited" from="Area" to="." method="_on_Area_area_exited"]
[connection signal="area_shape_entered" from="Area" to="." method="_on_Area_area_shape_entered"]
[connection signal="area_shape_exited" from="Area" to="." method="_on_Area_area_shape_exited"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="body_shape_entered" from="Area" to="." method="_on_Area_body_shape_entered"]
[connection signal="body_shape_exited" from="Area" to="." method="_on_Area_body_shape_exited"]
